--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                      e o código fonte <a href="https://github.com/IurySantos098/my-links.git">aqui</a>.
                 </p>
                     <h3>My CV</h3>
-                    <p>Este site como currículo online. Desenvolvido com HTML e CSS no curso StepOne. Confira o código fonte aqui.
+                    <p>Este site como currículo online. Desenvolvido com HTML e CSS no curso StepOne. Confira o código fonte <a href="https://github.com/IurySantos098/My-CV">aqui.</a> 
 
 
 
