--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://github.com/IurySantos098" style="color: white;">
+                        <a href="https://github.com/IurySantos098"target="_blank" style="color: white;">
                             <i class="fa-brands fa-github" style="color: #195dd2;"></i>github.com/IurySantos098
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/iury-santos-aa40a9141/" style="color: white;">
+                        <a href="https://www.linkedin.com/in/iury-santos-aa40a9141/"target="_blank" style="color: white;">
                             <i class="fa-brands fa-linkedin" style="color: #195dd2;"></i></i>Iury Santos
                         </a>
                     </li>
@@ -92,11 +92,11 @@
                 <h3>My links</h3>
                 <p>Site para centralizar meus links mais importantes em um só lugar. Desenvolvido com HTML e CSS no
                     curso StepOne. Confira o resultado clicando
-                    <a href="https://iurysantos098.github.io/my-links/">aqui</a> 
-                     e o código fonte <a href="https://github.com/IurySantos098/my-links.git">aqui</a>.
+                    <a href="https://iurysantos098.github.io/my-links/"target="_blank">aqui</a> 
+                     e o código fonte <a href="https://github.com/IurySantos098/my-links.git"target="_blank">aqui</a>.
                 </p>
                     <h3>My CV</h3>
-                    <p>Este site como currículo online. Desenvolvido com HTML e CSS no curso StepOne. Confira o código fonte <a href="https://github.com/IurySantos098/My-CV">aqui.</a> 
+                    <p>Este site como currículo online. Desenvolvido com HTML e CSS no curso StepOne. Confira o código fonte <a href="https://github.com/IurySantos098/My-CV"target="_blank">aqui.</a> 
 
 
 
