--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
             </section>
             <section>
                 <h2>Experiências</h2>
-                <p>Durante meu tempo de estudos dedicados à progr amação, empenhei-me em vários projetos pessoais que me
-                    permitiram aplicar conceitos aprendidos, arimorar minhas habilidades de resolução de problemas,
+                <p>Durante meu tempo de estudos dedicados à programação, empenhei-me em vários projetos pessoais que me
+                    permitiram aplicar conceitos aprendidos, aprimorar minhas habilidades de resolução de problemas,
                     colaboração em equipe, autodisciplina enquanto trabalhava de forma independente para concluir metas
                     de desenvolvimento. Estou ansioso para continuar a explorar e criar projetos desafiadores que
                     expandam meu conhecimento e competências na área de programação.
